--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ a {
 .btn:hover {
     background: orange;
     color: #333;
-    border-radius: 50px;
-    padding: 50px;
+    border-radius: 20px;
+    padding: 15px 18px;
 }
 
 .btn-ligth {
@@ -44,8 +44,8 @@ a {
 .btn-ligth:hover {
     background: orange;
     color: #333;
-    border-radius: 30px;
-    padding: 30px;
+    border-radius: 10px;
+    padding: 5px 6px;
 }
 
 
@@ -121,6 +121,10 @@ a {
 
 #showcase .container a {
     font-size: 20px;
+}
+
+.section-text1 {
+    text-align: center;
 }
 
 
